<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_description_hint">Describe your dream as clearly as you can.</string>
    <string-array name="year">

        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
    </string-array>
    <string-array name="month">

        <item>january</item>
        <item>february</item>
        <item>march</item>
        <item>april</item>
        <item>may</item>
        <item>june</item>
        <item>july</item>
        <item>august</item>
        <item>september</item>
        <item>october</item>
        <item>november</item>
        <item>december</item>

    </string-array>
    <string name="day">Day</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dreams_package_description_input" translatable="false">testing the description layout testing the description layouttesting the description layouttesting the description layouttesting the description layouttesting the description layouttesting the description layouttesting the description layouttesting the description layouttesting the description layouttesting the description layouttesting the description layout</string>
    <string name="dream_info_mood_hint">Slide the slider to choose between nightmare, bad dream, neutral, good dream and happy dream</string>
    <string name="hint_people">Did your dream include familiar (or unfamiliar) faces?</string>
    <string name="hint_names">Write down the Names of the people in your dream. Separate the names with commas (,) between them.</string>
    <string name="title_people_feelings">Feelings towards these People:</string>
    <string name="hint_feelings">How would you describe your feelings when you encountered them in your dream?</string>
    <string name="hint_sound">Did you see colors or was it all grayed-out?</string>
    <string name="hint_sounds">Did you hear any sounds or was it a silent movie?</string>
    <string name="hint_physical">Slide the slider to choose either NONE, USUAL, WORK OUT or EXCESSIVE.</string>
    <string name="hint_time_of_day">When did you sleep?</string>
    <string name="title_food">Today\'s food consumption</string>
    <string name="hint_food">Slide the slider to choose either LOW, MEDIUM or HIGH.</string>
    <string name="hint_dream_description">Describe your dream...</string>
    <string name="signUpHeader">Sign Up</string>
    <string name="username_input_hint">Username or Email</string>
    <string name="username_edtxt_hint">please enter your username or email</string>
    <string name="password_edt_txt_title">password</string>
    <string name="pass_edtxt_hint">please enter your password</string>
    <string name="acceptBtn">Accept</string>
    <string name="declineBtn">Decline</string>
    <string name="field_not_filled_toast">Please fill all the required fields.</string>
    <string name="taken_username_error">This username is already taken.</string>
    <string name="connection_error">Connection error.</string>
    <string name="loginTitle">Login</string>
    <string name="username_or_email_title">username or email</string>
    <string name="login_username_edtxt_hint">please enter your username or email</string>
    <string name="password_edtxt_title">Password</string>
    <string name="signInBtn">Enter</string>
    <string name="SignUpBtn">Register</string>
    <string name="SignInBtn">Sign In</string>
    <string name="sleepSaved">Sleep saved!</string>
    <string name="dream_info_input_two_title">DREAM INFO</string>
    <string name="dream_title">Title</string>
    <string name="enter_dream_title">Enter title...</string>
    <string name="enter_interpretation">Enter Text...</string>
    <string name="title_date">Date</string>
    <string name="title_interpretation">Your Interpretation</string>
    <string name="hint_interpretation">What is your take on your dream?</string>
    <string name="to_dream_info">To dream info</string>
    <string name="i_didn_t_have_a_dream">I didn\'t have a dream</string>
    <string name="sleep_duration">Sleep Duration</string>
    <string name="hint_questionnaire">There are a total of 19 Questions. You can answer them to figure out how lucid your dream was. This can help you improve your skills and also become better at understanding Lucid Dreaming</string>
    <string name="question_one">1. Were you aware of differences to the waking state?</string>
    <string name="question_two">2. Did you perceive your surroundings more intense than in non-lucid dreams?</string>
    <string name="dialog_note">Note: If you do not add these results to a dream, your level progression won\'t be affected.</string>
    <string name="dialog_txt_one">Your Dream Lucidity:</string>
    <string name="add_to_dream">Add to Dream</string>
    <string name="back_to_profile">back to profile</string>
    <string name="yes_checkbox">Yes</string>
    <string name="not_sure_checkbox">Not Sure</string>
    <string name="no_checkbox">No</string>
    <string name="next_btn">Next</string>
    <string name="previous_btn">Previous</string>
    <string name="question_2_title">Question 2</string>
    <string name="question_3_title">Question 3</string>
    <string name="q3">3. Were you aware that your physical body was asleep?</string>
    <string name="question_4_title">Question 4</string>
    <string name="q4">4. Were you sure that the dream actions do not affect your waking life?</string>
    <string name="question_5_title">Question 5</string>
    <string name="q5">5. Were you aware that all dream objects were not real?</string>
    <string name="question_19_title">Question 19</string>
    <string name="q19">19. Did you wake up prematurely against your will?</string>
    <string name="submit_btn">submit</string>
    <string name="question_18_title">Question 18</string>
    <string name="q18">18. Did you recall some facts or episodes from your waking life?</string>
    <string name="question_17_title">Question 17</string>
    <string name="q17">17. Did you have full control of your dream body?</string>
    <string name="question_16_title">Question 16</string>
    <string name="q16">16. Were you able to end an unpleasant situation?</string>
    <string name="question_15_title">Question 15</string>
    <string name="q15">15. Did you decide deliberately to wake up?</string>
    <string name="question_14_title">Question 14</string>
    <string name="q14">14. Did you decide deliberately not to wake up?</string>
    <string name="question_13_title">Question 13</string>
    <string name="q13">13. Were you able to deliberately shape your environment?</string>
    <string name="question_12_title">Question 12</string>
    <string name="q12">12. Were you not able to realize your intentions for the dream satisfactorily?</string>
    <string name="question_11_title">Question 11</string>
    <string name="q11">11. Did you decide deliberately to observe the dream as a dream?</string>
    <string name="question_10_title">Question 10</string>
    <string name="q10">10. Were you able to realize your intentions for the dream successfully?</string>
    <string name="question_9_title">Question 9</string>
    <string name="q9">9. Were you able to keep your awareness for a satisfying period of time?</string>
    <string name="question_8_title">Question 8</string>
    <string name="q8">8. Were you aware that all your dream characters were not real people?</string>
    <string name="question_7_title">Question 7</string>
    <string name="q7">7. Did you think about different options of what you can do in a dream?</string>
    <string name="question_6_title">Question 6</string>
    <string name="q6">6. Did you perceive your emotions more intense than in non-lucid dreams?</string>
    <string name="level_one_title">level one</string>
    <string name="LevelOneTitle">Level One</string>
    <string name="LevelTwoTitle">Level Two</string>
    <string name="LevelThreeTitle">Level Three</string>
    <string name="LevelFourTitle">Level Four</string>
    <string name="LevelFiveTitle">Level Five</string>
    <string name="LevelSixTitle">Level Six</string>
    <string name="LevelSevenTitle">Level Seven</string>
    <string name="LevelEightTitle">Level Eight</string>
    <string name="LevelNineTitle">Level Nine</string>
    <string name="LevelTenTitle">Level Ten</string>
    <string name="choose_your_dream_or_create_a_new_one">Choose your Dream or create a new one</string>
    <string name="dreams">Dreams</string>
    <string name="cancel">Cancel</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="apply">Apply</string>
    <string name="submit_dream">submit dream</string>
    <string name="d_r_e_a_m_s">D R E A M S</string>
    <string name="dream_count">Dream Count</string>
    <string name="dream_hours">Dream Hours</string>
    <string name="interpretation">Interpretation</string>
    <string name="description">Description</string>
    <string name="no_lucidity_data">No Lucidity Data.</string>
    <string name="take_test">take test</string>
    <string name="percentage">Percentage</string>
    <string name="do_you_want_to_answer_the_questionnaire">Do you want to answer the Questionnaire?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stats">Stats</string>
    <string name="dreams_btn">Dreams</string>
    <string name="people">People</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_password">Edit Password</string>
    <string name="instagram">Instagram</string>
    <string name="website">Website</string>
    <string name="contact_us">Contact Us</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="persian">Persian</string>
    <string name="english">English</string>
    <string name="l_a_n_g_u_a_g_e">Language</string>
    <string name="log_out">Log Out</string>
    <string name="dialog_note_delete">Are you sure you want to delete your dream?</string>
    <string name="levelsTitle">Levels</string>
    <string name="pass_not_match">passwords do not match.</string>
    <string name="error">Error</string>
    <string name="today_s_physical_activity">Today’s physical activity</string>
    <string name="night">Night</string>
    <string name="time_of_day">Time of day</string>
    <string name="sleep_info">SLEEP INFO</string>
    <string name="work_out">Work-Out</string>
    <string name="excessive">Excessive</string>
    <string name="usual">Usual</string>
    <string name="none">None</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="mood">Mood</string>
    <string name="names">Names</string>
    <string name="enter_the_names_here_separate_them_by_commas">Enter the names here. Separate them by commas.</string>
    <string name="positive">Positive</string>
    <string name="neutral">Neutral</string>
    <string name="negative">Negative</string>
    <string name="colors">Colors</string>
    <string name="colorful">Colorful</string>
    <string name="grayscale">Grayscale</string>
    <string name="sounds">Sounds</string>
    <string name="what_kind_of_sounds">What kind of sounds?</string>
    <string name="musical">Musical</string>
    <string name="non_musical">Non-Musical</string>
    <string name="dream_description">Dream Description</string>
    <string name="question_1_title">Question 1</string>
    <string name="options">Options</string>
    <string name="this_section_is_not_yet_ready_it_will_be_operational_in_future_updates">This section is not yet ready. It will be operational in future updates.</string>
</resources>