<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/lin_edt_profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_simple_rounded"
    android:backgroundTint="#B9000000"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable= "true"
    app:behavior_peekHeight= "0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.catchydreams.dreamcatcher.ui.customFont.MoonTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_username"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_simple"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white" />

    <com.catchydreams.dreamcatcher.ui.customFont.MoonTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_password"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_simple"
        android:backgroundTint="@color/gray" />

    <com.catchydreams.dreamcatcher.ui.customFont.MoonTextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/repeat_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_simple"
        android:backgroundTint="@color/gray" />

    <androidx.appcompat.widget.AppCompatButton
        android:elevation="10dp"
        android:id="@+id/btn_apply_edt"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/apply"
        android:background="@drawable/bg_simple_rounded"
        android:backgroundTint="@color/txt_glow"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:elevation="10dp"
        android:id="@+id/btn_cancel_edt"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:background="@drawable/bg_simple_rounded"
        android:backgroundTint="@color/red"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>