<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/bg_shape"
    android:backgroundTint="@color/black"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    tools:context=".ui.Fragments.SleepDreamInput.Fragments.questionnaire.QuestionOneFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.phrenologue.dreamcatcherapp.ui.costumeFont.MoonTextView
        android:id="@+id/question_one_title"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textColor="@color/txt_glow"
        android:text="Question 1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.phrenologue.dreamcatcherapp.ui.costumeFont.MoonTextView
        android:textAlignment="textStart"
        android:id="@+id/question_one"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size"
        android:layout_marginTop="16dp"
        android:text="@string/question_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:buttonTint="@color/white"
            android:checked="false"
            android:text="@string/yes_checkbox"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_notSure_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:buttonTint="@color/white"
            android:checked="false"
            android:text="@string/not_sure_checkbox"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/white"
            android:checked="false"
            android:text="@string/no_checkbox"
            android:textColor="@color/white" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="125dp"
        android:layout_height="29dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_gradient"
        android:elevation="4dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/next_btn"

        android:textColor="@color/white"
        android:textSize="@dimen/edt_txt_size"
        android:paddingStart="24dp"
        android:paddingEnd="24dp" />

</LinearLayout>