<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_shape_stroked"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="add"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <com.phrenologue.dreamcatcherapp.ui.costumeFont.MoonTextView
        android:textAlignment="center"
        android:id="@+id/txt_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/do_you_want_to_answer_the_questionnaire"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_gradient"
            android:elevation="4dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:paddingStart="24dp"
            android:paddingEnd="24dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_gradient"
            android:elevation="4dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:paddingEnd="24dp"
            android:paddingStart="24dp" />

    </LinearLayout>

</LinearLayout>